--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.1",
     "styled-normalize": "^8.0.7"
   },
@@ -21,7 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:db": "json-server --watch db.json --port 3005"
   },
   "eslintConfig": {
     "extends": "react-app"
