--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://dawidrynkal.github.io/BudgetApp",
+  "homepage": "http://dawidrynkal.github.io/BudgetApp/budget",
   "name": "budget-app-v2",
   "version": "0.1.0",
   "private": true,
